Reactive Angular with RxJs Course

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -17,7 +17,7 @@
                 <span>Register</span>
             </a>
 
-            <a mat-list-item>
+            <a mat-list-item routerLink="login">
                 <mat-icon>account_circle</mat-icon>
                 <span>Login</span>
             </a>
