--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -17,21 +17,40 @@
                 <span>Register</span>
             </a>
 
-            <a mat-list-item routerLink="login">
+            <a mat-list-item routerLink="login" *ngIf="auth.isLoggedOut$ | async">
                 <mat-icon>account_circle</mat-icon>
                 <span>Login</span>
             </a>
+
+          <a mat-list-item  (click)="logout()" *ngIf="auth.isLoggedIn$ | async">
+            <mat-icon>exit_to_app</mat-icon>
+            <span>Logout</span>
+          </a>
 
         </mat-nav-list>
 
     </mat-sidenav>
 
-    <mat-toolbar color="primary">
-        <button mat-icon-button (click)="start.open('mouse')">
-            <mat-icon>menu</mat-icon>
-        </button>
-    </mat-toolbar>
+  <mat-toolbar color="primary">
 
+    <div class="toolbar-tools">
+
+      <button mat-icon-button (click)="start.open('mouse')">
+        <mat-icon>menu</mat-icon>
+      </button>
+
+      <div class="filler"></div>
+
+      <ng-container *ngIf="(auth.user$ | async) as user">
+
+        <img class="user-avatar" [src]="user?.pictureUrl" >
+
+      </ng-container>
+
+    </div>
+
+
+  </mat-toolbar>
     <router-outlet></router-outlet>
 
 </mat-sidenav-container>
