Reactive Angular with RxJs Course

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -8,7 +8,7 @@
         <mat-tab label="Beginners">
 
             <courses-card-list
-                    [courses]="beginnerCourses$ | async" (coursesChanged)="reloadAllCourses()">
+                    [courses]="beginnerCourses$ | async">
 
             </courses-card-list>
 
@@ -17,7 +17,7 @@
         <mat-tab label="Advanced">
 
             <courses-card-list
-                    [courses]="advancedCourses$ | async" (coursesChanged)="reloadAllCourses()">
+                    [courses]="advancedCourses$ | async">
 
             </courses-card-list>
 
