--- a/src/app/course-dialog/course-dialog.component.html
+++ b/src/app/course-dialog/course-dialog.component.html
@@ -1,5 +1,5 @@
 
-<h2 mat-dialog-title>{{course.titles.description}}</h2>
+<h2 mat-dialog-title>{{course.description}}</h2>
 
 
 <mat-dialog-content [formGroup]="form">
