--- a/src/app/course/course.component.html
+++ b/src/app/course/course.component.html
@@ -11,27 +11,51 @@
 
   </mat-form-field>
 
-  <button class="search" mat-raised-button color="primary">
+  <button class="search" mat-raised-button color="primary" (click)="onSearch(searchInput.value)">
     <mat-icon>search</mat-icon>
     Search
   </button>
 
+  <ng-container *ngIf="(lessons$ | async) as lessons">
 
-  <table class="lessons-table mat-elevation-z7" *ngIf="(lessons$ | async) as lessons">
+    <table class="lessons-table mat-elevation-z7" *ngIf="lessons?.length && !showLessonDetail">
 
-    <thead>
-    <th>#</th>
-    <th>Description</th>
-    <th>Duration</th>
-    </thead>
+      <thead>
+      <th>#</th>
+      <th>Description</th>
+      <th>Duration</th>
+      </thead>
 
-    <tr *ngFor="let lesson of lessons">
-      <td class="seqno-cell">{{lesson.seqNo}}</td>
-      <td class="description-cell">{{lesson.description}}</td>
-      <td class="duration-cell">{{lesson.duration}}</td>
-    </tr>
+      <tr class="lesson-row" *ngFor="let lesson of lessons" (click)="openLesson(lesson)">
+        <td class="seqno-cell">{{lesson.seqNo}}</td>
+        <td class="description-cell">{{lesson.description}}</td>
+        <td class="duration-cell">{{lesson.duration}}</td>
+      </tr>
 
-  </table>
+    </table>
+
+
+    <div class="lesson-detail" *ngIf="showLessonDetail">
+
+      <button mat-raised-button (click)="onBackToSearch()">
+        <mat-icon>arrow_back_ios</mat-icon>
+        Back to Search
+      </button>
+
+      <h3>{{ activeLesson?.description }}</h3>
+      <h5>Duration: {{ activeLesson?.duration  }}</h5>
+
+      <iframe width="400" height="220"
+              [src]= "('https://www.youtube.com/embed/' + activeLesson?.videoId) | safeUrl"
+              frameborder="0" allowfullscreen>
+
+      </iframe>
+
+
+    </div>
+
+  </ng-container>
+
 
 
 </div>
