--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,35 +1,40 @@
 <mat-sidenav-container fullscreen>
 
-    <mat-sidenav #start (click)="start.close()">
-        <mat-nav-list>
+  <mat-sidenav #start (click)="start.close()">
+    <mat-nav-list>
 
-            <a mat-list-item routerLink="/">
-                <mat-icon>library_books</mat-icon>
-                <span>Courses</span>
-            </a>
+      <a mat-list-item routerLink="/">
+        <mat-icon>library_books</mat-icon>
+        <span>Courses</span>
+      </a>
 
-            <a mat-list-item routerLink="about">
-                <mat-icon>question_answer</mat-icon>
-                <span>About</span>
-            </a>
-            <a mat-list-item>
-                <mat-icon>person_add</mat-icon>
-                <span>Register</span>
-            </a>
+      <a mat-list-item routerLink="/search-lessons">
+        <mat-icon>search</mat-icon>
+        <span>Search Lessons</span>
+      </a>
 
-            <a mat-list-item routerLink="login" *ngIf="auth.isLoggedOut$ | async">
-                <mat-icon>account_circle</mat-icon>
-                <span>Login</span>
-            </a>
+      <a mat-list-item routerLink="about">
+        <mat-icon>question_answer</mat-icon>
+        <span>About</span>
+      </a>
+      <a mat-list-item>
+        <mat-icon>person_add</mat-icon>
+        <span>Register</span>
+      </a>
 
-          <a mat-list-item  (click)="logout()" *ngIf="auth.isLoggedIn$ | async">
-            <mat-icon>exit_to_app</mat-icon>
-            <span>Logout</span>
-          </a>
+      <a mat-list-item routerLink="login" *ngIf="auth.isLoggedOut$ | async">
+        <mat-icon>account_circle</mat-icon>
+        <span>Login</span>
+      </a>
 
-        </mat-nav-list>
+      <a mat-list-item (click)="logout()" *ngIf="auth.isLoggedIn$ | async">
+        <mat-icon>exit_to_app</mat-icon>
+        <span>Logout</span>
+      </a>
 
-    </mat-sidenav>
+    </mat-nav-list>
+
+  </mat-sidenav>
 
   <mat-toolbar color="primary">
 
@@ -43,7 +48,7 @@
 
       <ng-container *ngIf="(auth.user$ | async) as user">
 
-        <img class="user-avatar" [src]="user?.pictureUrl" >
+        <img class="user-avatar" [src]="user?.pictureUrl">
 
       </ng-container>
 
@@ -51,6 +56,6 @@
 
 
   </mat-toolbar>
-    <router-outlet></router-outlet>
+  <router-outlet></router-outlet>
 
 </mat-sidenav-container>
