--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -2,10 +2,10 @@
 
 <div class="about">
 
-    <h2>The RxJs In Practice Course</h2>
+    <h2>Reactive Angular Course</h2>
 
     <img class="course-image mat-elevation-z10"
-         src="https://s3-us-west-1.amazonaws.com/angular-university/course-images/rxjs-in-practice-course.png">
+         src="https://angular-university.s3-us-west-1.amazonaws.com/course-images/reactive-angular-course.jpg">
 
 
 </div>
