--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -7,8 +7,7 @@
 
         <mat-tab label="Beginners">
 
-            <courses-card-list
-                    [courses]="beginnerCourses$ | async">
+            <courses-card-list>
 
             </courses-card-list>
 
@@ -16,8 +15,7 @@
 
         <mat-tab label="Advanced">
 
-            <courses-card-list
-                    [courses]="advancedCourses$ | async">
+            <courses-card-list>
 
             </courses-card-list>
 
