--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -40,9 +40,34 @@
 
         <mat-tab label="Advanced">
 
-            <courses-card-list [courses]="advancedCourses">
+          <mat-card *ngFor="let course of advancedCourses" class="course-card mat-elevation-z10">
 
-            </courses-card-list>
+            <mat-card-header>
+
+              <mat-card-title>{{course.description}}</mat-card-title>
+
+            </mat-card-header>
+
+            <img mat-card-image [src]="course.iconUrl">
+
+            <mat-card-content>
+              <p>{{course.longDescription}}</p>
+            </mat-card-content>
+
+            <mat-card-actions class="course-actions">
+
+              <button mat-button class="mat-raised-button mat-primary" [routerLink]="['/courses', course.id]">
+                VIEW COURSE
+              </button>
+
+              <button mat-button class="mat-raised-button mat-accent"
+                      (click)="editCourse(course)">
+                EDIT
+              </button>
+
+            </mat-card-actions>
+
+          </mat-card>
 
         </mat-tab>
 
