--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -8,5 +8,7 @@
          src="https://angular-university.s3-us-west-1.amazonaws.com/course-images/reactive-angular-course.jpg">
 
 
+    <button mat-raised-button color="primary" (click)="run()">Run</button>
+
 </div>
 
