--- a/src/app/about/about.component.css
+++ b/src/app/about/about.component.css
@@ -1,10 +1,18 @@
 
 .course-image {
-    max-width: 300px;
-    border-radius: 4px;
+  max-width: 300px;
+  border-radius: 4px;
 }
 
 
 .about {
-    padding: 40px;
+  padding: 40px;
+  display: flex;
+  flex-direction: column;
+}
+
+
+.about button {
+  max-width: 100px;
+  margin-top: 30px;
 }
