Reactive Angular Course

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -7,69 +7,14 @@
 
         <mat-tab label="Beginners">
 
-          <mat-card *ngFor="let course of (beginnerCourses$ | async)"
-                    class="course-card mat-elevation-z10">
-
-            <mat-card-header>
-
-              <mat-card-title>{{course.description}}</mat-card-title>
-
-            </mat-card-header>
-
-            <img mat-card-image [src]="course.iconUrl">
-
-            <mat-card-content>
-              <p>{{course.longDescription}}</p>
-            </mat-card-content>
-
-            <mat-card-actions class="course-actions">
-
-              <button mat-button class="mat-raised-button mat-primary" [routerLink]="['/courses', course.id]">
-                VIEW COURSE
-              </button>
-
-              <button mat-button class="mat-raised-button mat-accent"
-                      (click)="editCourse(course)">
-                EDIT
-              </button>
-
-            </mat-card-actions>
-
-          </mat-card>
+            <courses-card-list [courses]="beginnerCourses$ | async"></courses-card-list>
 
         </mat-tab>
 
         <mat-tab label="Advanced">
 
-          <mat-card *ngFor="let course of (advancedCourses$ | async)"
-                    class="course-card mat-elevation-z10">
+            <courses-card-list [courses]="advancedCourses$ | async"></courses-card-list>
 
-            <mat-card-header>
-
-              <mat-card-title>{{course.description}}</mat-card-title>
-
-            </mat-card-header>
-
-            <img mat-card-image [src]="course.iconUrl">
-
-            <mat-card-content>
-              <p>{{course.longDescription}}</p>
-            </mat-card-content>
-
-            <mat-card-actions class="course-actions">
-
-              <button mat-button class="mat-raised-button mat-primary" [routerLink]="['/courses', course.id]">
-                VIEW COURSE
-              </button>
-
-              <button mat-button class="mat-raised-button mat-accent"
-                      (click)="editCourse(course)">
-                EDIT
-              </button>
-
-            </mat-card-actions>
-
-          </mat-card>
 
         </mat-tab>
 
