Reactive Angular Course

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -7,13 +7,19 @@
 
         <mat-tab label="Beginners">
 
-            <courses-card-list [courses]="beginnerCourses$ | async"></courses-card-list>
+            <courses-card-list [courses]="beginnerCourses$ | async"
+                (coursesChanged)="reloadCourses()">
+
+            </courses-card-list>
 
         </mat-tab>
 
         <mat-tab label="Advanced">
 
-            <courses-card-list [courses]="advancedCourses$ | async"></courses-card-list>
+            <courses-card-list [courses]="advancedCourses$ | async"
+                               (coursesChanged)="reloadCourses()">
+
+            </courses-card-list>
 
 
         </mat-tab>
