Reactive Angular Course

--- a/src/app/loading/loading.component.css
+++ b/src/app/loading/loading.component.css
@@ -1,13 +1,15 @@
 
 .spinner-container {
-  position: fixed;
-  height: 100%;
-  width: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  top: 0;
-  left: 0;
-  background:rgba(0, 0, 0, 0.32);
-  z-index: 2000;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background: rgba(0, 0, 0, 0.32);
+    z-index: 20000;
 }
+
+
