--- a/src/app/messages/messages.component.html
+++ b/src/app/messages/messages.component.html
@@ -1,9 +1,16 @@
-<div class="messages-container" *ngIf="showMessages">
 
-    <div class="message" *ngFor="let error of errors">
-        {{error}}
+<ng-container *ngIf="(errors$ | async) as errors">
+
+    <div class="messages-container" *ngIf="showMessages">
+
+        <div class="message" *ngFor="let error of errors">
+            {{error}}
+        </div>
+
+        <mat-icon class="close" (click)="onClose()">close</mat-icon>
+
     </div>
 
-    <mat-icon class="close" (click)="onClose()">close</mat-icon>
+</ng-container>
 
-</div>
+
