Reactive Angular Course

--- a/src/app/search-lessons/search-lessons.component.html
+++ b/src/app/search-lessons/search-lessons.component.html
@@ -8,27 +8,31 @@
 
   </mat-form-field>
 
-  <button class="search" mat-raised-button color="primary">
+  <button class="search" mat-raised-button color="primary"
+          (click)="onSearch(searchInput.value)" >
     <mat-icon>search</mat-icon>
     Search
   </button>
 
-    <table class="lessons-table mat-elevation-z7">
+    <ng-container *ngIf="(searchResults$ | async) as lessons">
 
-      <thead>
-      <th>#</th>
-      <th>Description</th>
-      <th>Duration</th>
-      </thead>
+        <table class="lessons-table mat-elevation-z7">
 
-      <!-- tr class="lesson-row">
-        <td class="seqno-cell">{{lesson.seqNo}}</td>
-        <td class="description-cell">{{lesson.description}}</td>
-        <td class="duration-cell">{{lesson.duration}}</td>
-      </tr -->
+            <thead>
+            <th>#</th>
+            <th>Description</th>
+            <th>Duration</th>
+            </thead>
 
-    </table>
+            <tr class="lesson-row" *ngFor="let lesson of lessons">
+              <td class="seqno-cell">{{lesson.seqNo}}</td>
+              <td class="description-cell">{{lesson.description}}</td>
+              <td class="duration-cell">{{lesson.duration}}</td>
+            </tr>
 
+        </table>
+
+    </ng-container>
 
 
 </div>
