--- a/src/app/search-lessons/search-lessons.component.html
+++ b/src/app/search-lessons/search-lessons.component.html
@@ -46,7 +46,7 @@
             Back to Search
         </button>
 
-        <lesson></lesson>
+        <lesson [lesson]="activeLesson"></lesson>
 
     </ng-template>
 
