Reactive Angular Course

--- a/src/app/course/course.component.html
+++ b/src/app/course/course.component.html
@@ -1,35 +1,30 @@
+<ng-container *ngIf="(data$ | async) as data">
 
-<ng-container *ngIf="(course$ | async) as course">
+    <div class="course">
 
-    <ng-container *ngIf="(lessons$ | async) as lessons">
+        <h2>{{data.course?.description}}</h2>
 
-        <div class="course">
+        <img class="course-thumbnail" [src]="data.course?.iconUrl">
 
-            <h2>{{course?.description}}</h2>
+        <table class="lessons-table mat-elevation-z7">
 
-            <img class="course-thumbnail" [src]="course?.iconUrl">
+            <thead>
 
-            <table class="lessons-table mat-elevation-z7">
+            <th>#</th>
+            <th>Description</th>
+            <th>Duration</th>
 
-                <thead>
+            </thead>
 
-                <th>#</th>
-                <th>Description</th>
-                <th>Duration</th>
+            <tr class="lesson-row" *ngFor="let lesson of data.lessons">
+                <td class="seqno-cell">{{lesson.seqNo}}</td>
+                <td class="description-cell">{{lesson.description}}</td>
+                <td class="duration-cell">{{lesson.duration}}</td>
+            </tr>
 
-                </thead>
+        </table>
 
-                <tr class="lesson-row" *ngFor="let lesson of lessons">
-                    <td class="seqno-cell">{{lesson.seqNo}}</td>
-                    <td class="description-cell">{{lesson.description}}</td>
-                    <td class="duration-cell">{{lesson.duration}}</td>
-                </tr>
-
-            </table>
-
-        </div>
-
-    </ng-container>
+    </div>
 
 </ng-container>
 
