--- a/src/app/course/course.component.html
+++ b/src/app/course/course.component.html
@@ -4,9 +4,9 @@
 
         <h2>{{data.course?.description}}</h2>
 
-        <img class="course-thumbnail" [src]="data.course?.iconUrl">
+        <img class="course-thumbnail" [src]="data.course?.iconUrl" *ngIf="data.course">
 
-        <table class="lessons-table mat-elevation-z7">
+        <table class="lessons-table mat-elevation-z7" *ngIf="data.lessons.length">
 
             <thead>
 
