upgrade to Angular 15 and Node 18

--- a/src/app/courses-card-list/courses-card-list.component.html
+++ b/src/app/courses-card-list/courses-card-list.component.html
@@ -1,5 +1,5 @@
 <mat-card *ngFor="let course of courses"
-          class="course-card mat-elevation-z10">
+          class="course-card mat-elevation-z7">
 
     <mat-card-header>
 
@@ -15,11 +15,11 @@
 
     <mat-card-actions class="course-actions">
 
-        <button mat-button class="mat-raised-button mat-primary" [routerLink]="['/courses', course.id]">
+        <button mat-button mat-raised-button color="primary" [routerLink]="['/courses', course.id]">
             VIEW COURSE
         </button>
 
-        <button mat-button class="mat-raised-button mat-accent"
+        <button mat-button mat-raised-button color="accent"
                 (click)="editCourse(course)">
             EDIT
         </button>
