--- a/src/app/courses-card-list/courses-card-list.component.css
+++ b/src/app/courses-card-list/courses-card-list.component.css
@@ -5,6 +5,11 @@
 }
 
 .course-actions {
-    text-align: center;
+    display: flex;
+  justify-content: center;
+}
+
+.course-actions button {
+  margin-right: 5px;
 }
 
