--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,11 +1,14 @@
 @use '@angular/material' as mat;
-/* You can add global styles to this file, and also import other style files */
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 
 
-
-
-// Include non-theme styles for core.
 @include mat.core();
+
+$dark-primary-text: rgba(black, 0.87);
+
+$light-primary-text: white;
 
 $mat-primary: (
   50: #fce4ec,
@@ -73,12 +76,25 @@ $mat-accent: (
   )
 );
 
+$primary: mat.define-palette($mat-primary, 500);
 
-// Define a theme.
-$primary: mat.define-palette(mat.$pink-palette);
-$accent:  mat.define-palette($mat-accent, A200, A100, A400);
+$accent: mat.define-palette($mat-accent, A200, A100, A400);
 
-$theme: mat.define-light-theme($primary, $accent);
+$theme: mat.define-light-theme((
+  color: (
+    primary: $primary,
+    accent: $accent,
+  ),
+  typography: mat.define-typography-config(),
+  density: 0,
+));
 
-// Include all theme styles for the components.
 @include mat.all-component-themes($theme);
+
+.mat-elevation-z7 {
+  box-shadow: 0 4px 5px -2px #0003, 0 7px 10px 1px #00000024, 0 2px 16px 1px #0000001f !important;
+}
+
+.mat-elevation-z10 {
+  box-shadow: 0 6px 6px -3px #0003, 0 10px 14px 1px #00000024, 0 4px 18px 3px #0000001f !important;
+}
